welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type color
def faireV(c: color) {
              ^MethodsPicture:27: error: not found: value color
faireV(color.GREEN)
       ^